unix/lang/tests/error/error_after_import.yab

# Import this library
import library5e

# Have syntax error afterwards
x = a$


